--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -9,6 +9,7 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
 [staging : production]
+; test comment
 
 [testing : production]
 phpSettings.display_startup_errors = 1
